src/crt/error.h

#ifndef __ERROR_H
#define __ERROR_H 1

void fatal_error( const char* message );
void warning_error( const char* message );

#endif